--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 	<!-- the entire body must be written by student -->
 
 	<ol>
-		<li data-ns-test="shooppinngList">Bag</li>
-		<li data-ns-test="shooppinngList">Handebag</li>
-		<li data-ns-test="shooppinngList">Clothes</li>
+		<li data-ns-test="shoppingList">Bag</li>
+		<li data-ns-test="shoppingList">Handebag</li>
+		<li data-ns-test="shoppingList">Clothes</li>
 	</ol>
 	<ul>
-		<li data-ns-test='holidayList'>Hyderabad</li>
-		<li data-ns-test='holidayList'>Maldives</li>
-		<li data-ns-test='holidayList'>Singapore</li>
+		<li data-ns-test="holidayList">Hyderabad</li>
+		<li data-ns-test="holidayList">Maldives</li>
+		<li data-ns-test="holidayList">Singapore</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
